[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://FX/Shader.tscn" type="PackedScene" id=2]
[ext_resource path="res://texture_ui/game/Background/Stars.png" type="Texture" id=3]
[ext_resource path="res://scripts/Stars.gd" type="Script" id=4]
[ext_resource path="res://scripts/RocketBody.gd" type="Script" id=5]
[ext_resource path="res://texture_ui/game/characters/character.png" type="Texture" id=6]
[ext_resource path="res://MenuScenes/ufo.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/AndroidAssassin-WXXY.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://texture_ui/game/indecators/heart_icon.png" type="Texture" id=9]
[ext_resource path="res://texture_ui/game/screen_button/flatDark23.png" type="Texture" id=10]
[ext_resource path="res://texture_ui/game/screen_button/flatDark24.png" type="Texture" id=11]
[ext_resource path="res://texture_ui/game/screen_button/flatDark48.png" type="Texture" id=12]
[ext_resource path="res://texture_ui/game/screen_button/flatDark26.png" type="Texture" id=13]
[ext_resource path="res://texture_ui/game/screen_button/flatDark13.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 8 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Shader" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WorldEnvironment" parent="Shader" instance=ExtResource( 2 )]

[node name="Background" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 4.0
margin_right = 1023.0
margin_bottom = 598.0
expand = true

[node name="Stars" type="Sprite" parent="Background"]
position = Vector2( 800.314, -550 )
scale = Vector2( 1.20799, 1 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Stars2" type="Sprite" parent="Background"]
position = Vector2( 500, 500 )
scale = Vector2( 1.20799, 1 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="RocketBody" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="RocketPoligon" type="CollisionPolygon2D" parent="RocketBody"]
polygon = PoolVector2Array( 511.805, 243.496, 504.234, 256.142, 498.081, 267.975, 493.19, 280.755, 490.034, 293.378, 488.299, 304.895, 488.299, 307.262, 469.365, 320.358, 467.156, 355.543, 488.614, 338.029, 501.079, 338.502, 493.209, 361.377, 493.303, 362.322, 500.199, 362.227, 524.1, 361.66, 531.657, 361.566, 524.478, 337.477, 539.687, 337.666, 560.187, 356.843, 555.924, 320.08, 539.49, 307.938, 537.92, 296.947, 535.094, 287.108, 529.86, 271.567, 524.103, 259.425, 518.556, 249.585, 514.892, 243.619 )

[node name="RocketArea" type="Area2D" parent="RocketBody"]

[node name="RocketPoligon2" type="CollisionPolygon2D" parent="RocketBody/RocketArea"]
polygon = PoolVector2Array( 511.805, 243.496, 504.234, 256.142, 498.081, 267.975, 493.19, 280.755, 490.034, 293.378, 488.299, 304.895, 488.299, 307.262, 469.365, 320.358, 467.156, 355.543, 488.614, 338.029, 501.079, 338.502, 493.209, 361.377, 493.303, 362.322, 500.199, 362.227, 524.1, 361.66, 531.657, 361.566, 524.478, 337.477, 539.687, 337.666, 560.187, 356.843, 555.924, 320.08, 539.49, 307.938, 537.92, 296.947, 535.094, 287.108, 529.86, 271.567, 524.103, 259.425, 518.556, 249.585, 514.892, 243.619 )

[node name="RocketImg" type="Sprite" parent="RocketBody/RocketArea"]
position = Vector2( 514.613, 313.755 )
texture = ExtResource( 6 )

[node name="UFO" parent="." instance=ExtResource( 7 )]
position = Vector2( 0.7612, -0.817551 )

[node name="LabelHealth" type="Label" parent="."]
margin_left = 99.4555
margin_top = 24.0065
margin_right = 139.456
margin_bottom = 76.0065
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="heart_icon" type="Sprite" parent="."]
position = Vector2( 49.4169, 53.9483 )
scale = Vector2( 1.57054, 1.57054 )
texture = ExtResource( 9 )

[node name="Hud" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="Gamepad" type="Node2D" parent="Hud"]

[node name="Left" type="TouchScreenButton" parent="Hud/Gamepad"]
position = Vector2( 41.1688, 468.069 )
scale = Vector2( 1.2749, 1.2749 )
normal = ExtResource( 10 )

[node name="Right" type="TouchScreenButton" parent="Hud/Gamepad"]
position = Vector2( 244.348, 465.71 )
scale = Vector2( 1.28508, 1.28508 )
normal = ExtResource( 11 )

[node name="Boost" type="TouchScreenButton" parent="Hud/Gamepad"]
position = Vector2( 944.479, 459.471 )
rotation = 1.59008
scale = Vector2( 1.1887, 1.24804 )
normal = ExtResource( 12 )

[node name="Down" type="TouchScreenButton" parent="Hud/Gamepad"]
position = Vector2( 138.041, 380.293 )
scale = Vector2( 1.24435, 1.24435 )
normal = ExtResource( 13 )

[node name="Pause" type="TouchScreenButton" parent="Hud/Gamepad"]
position = Vector2( 940.897, 20.6268 )
scale = Vector2( 1.31175, 1.34009 )
normal = ExtResource( 14 )
[connection signal="body_entered" from="RocketBody/RocketArea" to="." method="_on_RocketArea_body_entered"]
[connection signal="pressed" from="Hud/Gamepad/Left" to="RocketBody" method="_on_Left_pressed"]
[connection signal="released" from="Hud/Gamepad/Left" to="RocketBody" method="_on_Left_released"]
[connection signal="pressed" from="Hud/Gamepad/Right" to="RocketBody" method="_on_Right_pressed"]
[connection signal="released" from="Hud/Gamepad/Right" to="RocketBody" method="_on_Right_released"]
[connection signal="pressed" from="Hud/Gamepad/Boost" to="RocketBody" method="_on_Boost_pressed"]
[connection signal="released" from="Hud/Gamepad/Boost" to="RocketBody" method="_on_Boost_released"]
[connection signal="pressed" from="Hud/Gamepad/Down" to="RocketBody" method="_on_Down_pressed"]
[connection signal="released" from="Hud/Gamepad/Down" to="RocketBody" method="_on_Down_released"]
[connection signal="pressed" from="Hud/Gamepad/Pause" to="RocketBody" method="_on_Pause_pressed"]
[connection signal="released" from="Hud/Gamepad/Pause" to="RocketBody" method="_on_Pause_released"]
